--- a/index.html
+++ b/index.html
@@ -9,25 +9,19 @@
 <body>
   <div class="container-principal">
     <header class="cabecalho">
-      <h1 class="titulo-principal">Olá, eu sou João Silva</h1>
+      <h1 class="titulo-principal">Olá, eu sou Vinícius Rodrigues de Jesus</h1>
       <p class="subtitulo">Desenvolvedor Front-end & Entusiasta de UX/UI</p>
     </header>
 
     <section class="sobre-mim">
       <div class="foto-perfil">
-        <img src="perfil.png" alt="Foto de perfil de João Silva" />
+        <img src="Punpun.jpeg" alt="Foto de perfil de Vinícius" />
       </div>
       <div class="descricao">
         <h2>Sobre Mim</h2>
         <p>
-          Tenho 28 anos e atuo há 5 anos como desenvolvedor front-end. Sou apaixonado
-          por criar interfaces responsivas e intuitivas, sempre focando na melhor
-          experiência para o usuário.
-        </p>
-        <p>
-          No meu tempo livre, gosto de estudar novas tendências de design, praticar
-          esportes e tocar violão.
-        </p>
+          Oi! Meu nome é Vinícius, tenho 16 anos e estou começando a aprender CSS agora. Estou curtindo bastante entender como dá pra mudar completamente o visual de um site só com código. Ainda me confundo um pouco com algumas propriedades e seletores, mas cada dia descubro algo novo que me anima a continuar. Meu objetivo é conseguir montar minhas próprias páginas do zero, deixando tudo com a minha cara!
+                </p>
       </div>
     </section>
 
@@ -43,7 +37,7 @@
     </section>
 
     <footer class="rodape">
-      <p>© 2025 João Silva. Todos os direitos reservados.</p>
+      <p>© 2025 Vinícius Rodrigues de Jesus. Todos os direitos reservados.</p>
     </footer>
   </div>
 </body>
